syntax = "proto3";

package io.harness.pms.contracts.steps;

option java_multiple_files = true;

message StepType {
  string type = 1;
}

message StepInfo {
  string name = 1;
  StepMetaData stepMetaData = 2;
}

message StepMetaData {
  repeated string category = 1;
  string folderPath = 2;
}